# godot-test-game-project

./: .gitignore  README.md
memory/: 2026-02-19.md
veilborn-town/: .gitignore  README.md  pyproject.toml
veilborn-town/src/townsim/: cli.py  events.py  generator.py  models.py  persistence.py  rng.py  simulator.py
