[project]
name = "townsim"
version = "0.1.0"
description = "Tiny deterministic town simulation vertical slice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0,<3.0",
]

[project.scripts]
townsim = "townsim.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
